--- a/src/templates/wiki/default.html
+++ b/src/templates/wiki/default.html
@@ -1,10 +1,10 @@
 <%= partial('partials/header.html') %>
 <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-10">
         <%= content %>
     </div>
-    <div class="col-md-3">
-        <%= partial('partials/section_side_nav.html') %>
+    <div class="col-md-2">
+        <%= partial('partials/sidenavs/wiki.html') %>
     </div>
 </div>
 <%= partial('partials/footer.html') %>
