Fix main style sheet not loading

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -19,7 +19,7 @@
         <!-- Page stylesheets -->
         <link href="https://mcresourcepile.github.io/assets/css/bootstrap.css" rel="stylesheet">
         <link href="https://mcresourcepile.github.io/assets/css/main.css" rel="stylesheet">
-        <link href="/assets/css/main.css" rel="stylesheet">
+        <link href="/markdown/assets/css/main.css" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="shortcut icon" href="https://mcresourcepile.github.io/assets/favicon.ico">
         <!-- Page script files -->
@@ -86,7 +86,7 @@
                                 <li><a href="/stats/overcast/objective">Objective Leaderboards</a></li>
                             </ul>
                         </li>
-                        <li class="active"><a href="/wiki">Wiki</a></li>
+                        <li class="active"><a href="/markdown/wiki">Wiki</a></li>
                         <li><a href="/updates">Updates</a></li>
                     </ul>
                 </div>
