--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -96,6 +96,6 @@
             <div class="container">
                 <div class="content-header">
                     <%= partial('partials/alert.html') %>
-                    <div class="content-title"><%= title %> <a class="content-title-url" href="/<%= document.dest %>"><i class="fa fa-link" aria-hidden="true"></i> <%= (document.src).replace('.md', '') %></a></div>
+                    <div class="content-title"><%= title %> <a class="content-title-url" href="/markdown/<%= document.dest.replace('.html', '') %>"><i class="fa fa-link" aria-hidden="true"></i> <%= (document.src).replace('.md', '') %></a></div>
                     <div class="content-subtitle"><%= description %></div>
                 </div>
