--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -25,7 +25,7 @@
                     <div class="footer-section col-md-3">
                         <div class="footer-section-head">Site</div>
                         <a class="footer-item" href="/updates">Update Posts</a>
-                        <a class="footer-item" href="/updates">Other Networks</a>
+                        <a class="footer-item" href="/other">Other Networks</a>
                     </div>
                 </div>
                 <div class="footer-bottom center">
