--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -79,6 +79,7 @@
                                 <li><a href="/leagues/overcast">Overcast Network</a></li>
                                 <li><a href="/leagues/pgm">PGM Community</a></li>
                                 <li><a href="/leagues/stratus">Stratus Network</a></li>
+                                <li><a href="/leagues/avicus">Avicus Network</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
