--- a/src/templates/partials/sidenavs/wiki.html
+++ b/src/templates/partials/sidenavs/wiki.html
@@ -1,6 +1,7 @@
 <ul class="nav nav-pills nav-stacked sidenav">
     <li>Navigation</li>
-    <% _.each(_.where(documents, {"category": "wiki"}), function (document) { %>
-    <li><a href="/markdown/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li>
-    <% }); %>
+    <li><a href="/addon-project/wiki">Stratus Network</a></li>
+    <% _.each(_.where(documents, {"category": "wiki"}), function (document) { %><li><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
+    <li>Tools</li>
+    <% _.each(_.where(documents, {"category": "tools"}), function (document) { %><li><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
 </ul>
