--- a/src/templates/partials/sidenavs/wiki.html
+++ b/src/templates/partials/sidenavs/wiki.html
@@ -1,7 +1,28 @@
-<ul class="nav nav-pills nav-stacked sidenav">
-    <li>Navigation</li>
-    <li><a href="/addon-project/wiki">Stratus Network</a></li>
-    <% _.each(_.where(documents, {"category": "wiki"}), function (document) { %><li><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
-    <li>Tools</li>
-    <% _.each(_.where(documents, {"category": "tools"}), function (document) { %><li><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
-</ul>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+            <ul id="drilldown" class="nav nav-pills nav-stacked sidenav">
+                <li>Navigation</li>
+                <li><a href="/addon-project/wiki/">Stratus Network</a></li>
+                <li><a href="/addon-project/wiki/history">Hisotry</a></li>
+                <li><a href="/addon-project/wiki/ranks" data-toggle="collapse" data-target="#menu-ranks">Ranks</a>
+                    <div style="padding-left:0px;">
+                        <ul id="menu-ranks" class="nav nav-pills nav-stacked collapse">
+                            <% _.each(_.where(documents, {"category": "ranks"}), function (document) { %><li class="sidenav-sub"><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="/addon-project/wiki/events">Events</a></li>
+                <li><a href="/addon-project/wiki/gamemodes" data-toggle="collapse" data-target="#menu-games">Gamemodes</a>
+                    <div style="padding-left:0px;">
+                        <ul id="menu-games" class="nav nav-pills nav-stacked collapse">
+                            <% _.each(_.where(documents, {"category": "games"}), function (document) { %><li class="sidenav-sub"><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
+                        </ul>
+                    </div>
+                </li>
+                <li>Tools</li>
+                <% _.each(_.where(documents, {"category": "tools"}), function (document) { %><li><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
+            </ul>
+        </div>
+    </div>
+</div>
