--- a/src/templates/partials/sidenavs/wiki.html
+++ b/src/templates/partials/sidenavs/wiki.html
@@ -4,7 +4,7 @@
             <ul id="drilldown" class="nav nav-pills nav-stacked sidenav">
                 <li>Navigation</li>
                 <li><a href="/addon-project/wiki/">Stratus Network</a></li>
-                <li><a href="/addon-project/wiki/history">Hisotry</a></li>
+                <li><a href="/addon-project/wiki/history">History</a></li>
                 <li><a href="/addon-project/wiki/ranks" data-toggle="collapse" data-target="#menu-ranks">Ranks</a>
                     <div style="padding-left:0px;">
                         <ul id="menu-ranks" class="nav nav-pills nav-stacked collapse">
@@ -20,7 +20,10 @@
                         </ul>
                     </div>
                 </li>
-                <li>Tools</li>
+                <li>Page Tools</li>
+                <li><a href="https://github.com/MCResourcePile/addon-project/edit/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Edit this page</a></li>
+                <li><a href="https://github.com/MCResourcePile/addon-project/commits/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Page history</a></li>
+                <li>Wiki Tools</li>
                 <% _.each(_.where(documents, {"category": "tools"}), function (document) { %><li><a href="/addon-project/<%= document.dest.replace('.html', '') %>"><%= document.title %></a></li><% }); %>
             </ul>
         </div>
