--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,6 +6,22 @@
     padding-left: 12px;
 }
 
+.sidenav > li.active > a {
+    background-color: rgba(255, 255, 255, 0);
+    color: #337ab7;
+    font-weight: 600;
+    margin-bottom: 2px;
+}
+
+
+.sidenav > li > a:hover,
+.sidenav > li > a:focus,
+.sidenav > li.active > a:hover,
+.sidenav > li.active > a:focus {
+    background-color: #f0f0f0;
+    color: #337ab7;
+}
+
 .content-title-url,
 .content-title-url:hover,
 .content-title-url:focus {
