--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -34,5 +34,11 @@
             </div>
         </div>
         <script src="https://mcresourcepile.github.io/assets/js/commons.js"></script>
+        <script>
+            $(document).ready(function(){
+                $("[href='/addon-project/wiki/ranks/administrator']").parent('li').addClass("active");
+                $("li.sidenav-sub.active").parent('ul').removeClass('collapse');
+            });
+        </script>
     </body>
 </html>
