--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -36,7 +36,7 @@
         <script src="https://mcresourcepile.github.io/assets/js/commons.js"></script>
         <script>
             $(document).ready(function(){
-                $("[href='/addon-project/wiki/ranks/administrator']").parent('li').addClass("active");
+                $("[href='/addon-project/<%= document.dest.replace('.html', '') %>']").parent('li').addClass("active");
                 $("li.sidenav-sub.active").parent('ul').removeClass('collapse');
             });
         </script>
