--- a/src/templates/partials/sidenavs/wiki.html
+++ b/src/templates/partials/sidenavs/wiki.html
@@ -3,7 +3,7 @@
         <div class="col-sm-3">
             <ul id="drilldown" class="nav nav-pills nav-stacked sidenav">
                 <li>Navigation</li>
-                <li><a href="/addon-project/wiki/">Stratus Network</a></li>
+                <li><a href="/addon-project/wiki/index">Stratus Network</a></li>
                 <li><a href="/addon-project/wiki/history">History</a></li>
                 <li><a href="/addon-project/wiki/ranks" data-toggle="collapse" data-target="#menu-ranks">Ranks</a>
                     <div style="padding-left:0px;">
