--- a/src/templates/partials/sidenavs/wiki.html
+++ b/src/templates/partials/sidenavs/wiki.html
@@ -22,6 +22,7 @@
                 </li>
                 <li>Page Tools</li>
                 <li><a href="https://github.com/MCResourcePile/addon-project/edit/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Edit this page</a></li>
+                <li><a href="https://raw.githubusercontent.com/MCResourcePile/addon-project/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Page source</a></li>
                 <li><a href="https://github.com/MCResourcePile/addon-project/commits/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Page history</a></li>
                 <li>Wiki Tools</li>
                 <% _.each(_.where(documents, {"category": "tools"}), function (page) { %><li><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li><% }); %>
