--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -26,6 +26,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://mcresourcepile.github.io/assets/js/bootstrap.min.js"></script>
         <script src="https://mcresourcepile.github.io/assets/js/js.cookie.js"></script>
+        <script src="https://mcresourcepile.github.io/assets/js/preferences.js"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -63,7 +64,6 @@
                                 <li><a href="/maps/overcast">Overcast Collection</a></li>
                                 <li><a href="/maps/pgm">PGM Collection</a></li>
                                 <li><a href="/maps/stratus">Stratus Collection</a></li>
-                                <li><a href="/maps/avicus">Avicus Collection</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
@@ -79,7 +79,6 @@
                                 <li><a href="/leagues/overcast">Overcast Network</a></li>
                                 <li><a href="/leagues/pgm">PGM Community</a></li>
                                 <li><a href="/leagues/stratus">Stratus Network</a></li>
-                                <li><a href="/leagues/avicus">Avicus Network</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
