--- a/src/templates/partials/sidenavs/wiki.html
+++ b/src/templates/partials/sidenavs/wiki.html
@@ -1,32 +1,52 @@
-<div class="container">
-    <div class="row">
-        <div class="col-sm-3">
-            <ul id="drilldown" class="nav nav-pills nav-stacked sidenav">
-                <li>Navigation</li>
-                <li><a href="/addon-project/wiki/index">Stratus Network</a></li>
-                <li><a href="/addon-project/wiki/history">History</a></li>
-                <li><a href="/addon-project/wiki/ranks" data-toggle="collapse" data-target="#menu-ranks">Ranks</a>
-                    <div style="padding-left:0px;">
-                        <ul id="menu-ranks" class="nav nav-pills nav-stacked collapse sidenav">
-                            <% _.each(_.where(documents, {"category": "ranks"}), function (page) { %><li class="sidenav-sub"><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li><% }); %>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="/addon-project/wiki/events">Events</a></li>
-                <li><a href="/addon-project/wiki/gamemodes" data-toggle="collapse" data-target="#menu-games">Gamemodes</a>
-                    <div style="padding-left:0px;">
-                        <ul id="menu-games" class="nav nav-pills nav-stacked collapse sidenav">
-                            <% _.each(_.where(documents, {"category": "games"}), function (page) { %><li class="sidenav-sub"><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li><% }); %>
-                        </ul>
-                    </div>
-                </li>
-                <li>Page Tools</li>
-                <li><a href="https://github.com/MCResourcePile/addon-project/edit/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Edit this page</a></li>
-                <li><a href="https://raw.githubusercontent.com/MCResourcePile/addon-project/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Page source</a></li>
-                <li><a href="https://github.com/MCResourcePile/addon-project/commits/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Page history</a></li>
-                <li>Wiki Tools</li>
-                <% _.each(_.where(documents, {"category": "tools"}), function (page) { %><li><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li><% }); %>
+<ul id="drilldown" class="nav nav-pills nav-stacked sidenav">
+    <li>Navigation</li>
+    <li><a href="/addon-project/wiki/index">Stratus Network</a></li>
+    <li>
+        <a href="/addon-project/wiki/history" data-toggle="collapse" data-target="#menu-history">History</a>
+        <div style="padding-left:0px;">
+            <ul id="menu-history" class="nav nav-pills nav-stacked collapse sidenav">
+                <% _.each(_.where(documents, {"category": "history"}), function (page) { %>
+                <li class="sidenav-sub"><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li>
+                <% }); %>
             </ul>
         </div>
-    </div>
-</div>
+    </li>
+    <li>
+        <a href="/addon-project/wiki/ranks" data-toggle="collapse" data-target="#menu-ranks">Ranks</a>
+        <div style="padding-left:0px;">
+            <ul id="menu-ranks" class="nav nav-pills nav-stacked collapse sidenav">
+                <% _.each(_.where(documents, {"category": "ranks"}), function (page) { %>
+                <li class="sidenav-sub"><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li>
+                <% }); %>
+            </ul>
+        </div>
+    </li>
+    <li>
+        <a href="/addon-project/wiki/events" data-toggle="collapse" data-target="#menu-events">Events</a>
+        <div style="padding-left:0px;">
+            <ul id="menu-events" class="nav nav-pills nav-stacked collapse sidenav">
+                <% _.each(_.where(documents, {"category": "events"}), function (page) { %>
+                <li class="sidenav-sub"><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li>
+                <% }); %>
+            </ul>
+        </div>
+    </li>
+    <li>
+        <a href="/addon-project/wiki/gamemodes" data-toggle="collapse" data-target="#menu-games">Gamemodes</a>
+        <div style="padding-left:0px;">
+            <ul id="menu-games" class="nav nav-pills nav-stacked collapse sidenav">
+                <% _.each(_.where(documents, {"category": "games"}), function (page) { %>
+                <li class="sidenav-sub"><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li>
+                <% }); %>
+            </ul>
+        </div>
+    </li>
+    <li>Page Tools</li>
+    <li><a href="https://github.com/MCResourcePile/addon-project/edit/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Edit this page</a></li>
+    <li><a href="https://raw.githubusercontent.com/MCResourcePile/addon-project/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Page source</a></li>
+    <li><a href="https://github.com/MCResourcePile/addon-project/commits/source/src/content/<%= document.dest.replace('.html', '.md') %>" target="_blank">Page history</a></li>
+    <li>Wiki Tools</li>
+    <% _.each(_.where(documents, {"category": "tools"}), function (page) { %>
+    <li><a href="/addon-project/<%= page.dest.replace('.html', '') %>"><%= page.title %></a></li>
+    <% }); %>
+</ul>
