--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -27,6 +27,7 @@
         <script src="https://mcresourcepile.github.io/assets/js/bootstrap.min.js"></script>
         <script src="https://mcresourcepile.github.io/assets/js/js.cookie.js"></script>
         <script src="https://mcresourcepile.github.io/assets/js/preferences.js"></script>
+        <script src="/addon-project/assets/js/github.commits.widget.js"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
