--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -44,3 +44,12 @@
     font-size: 12px;
     color: #818181;
 }
+
+table {
+    width: 100%;
+}
+
+table > thead > tr > th,
+table > tbody > tr > td {
+    padding: 6px !important;
+}
