--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -8,14 +8,14 @@
                     <div class="footer-section col-md-3">
                         <div class="footer-section-head">About</div>
                         <a class="footer-item" href="/staff">Staff</a>
+                        <a class="footer-item" href="/updates">Updates</a>
                         <a class="footer-item" href="https://discord.gg/ygNgxKj">Discord</a>
-                        <a class="footer-item" href="/admin/forms/apply">Positions</a>
                     </div>
                     <div class="footer-section col-md-3">
                         <div class="footer-section-head">Development</div>
                         <a class="footer-item" href="/revisions/website">Revisions</a>
                         <a class="footer-item" href="https://github.com/MCResourcePile" target="_blank">GitHub</a>
-                        <a class="footer-item" href="https://github.com/MCResourcePile/MCResourcePile.github.io/issues/new" target="_blank">Report an Issue</a>
+                        <a class="footer-item" href="https://github.com/MCResourcePile/addon-project/issues/new" target="_blank">Report an Issue</a>
                     </div>
                     <div class="footer-section col-md-3">
                         <div class="footer-section-head">Administration</div>
