Update wiki navigation to build structure from directory format

--- a/src/templates/wiki/rank.html
+++ b/src/templates/wiki/rank.html
@@ -22,7 +22,7 @@
         <%= content %>
     </div>
     <div class="col-md-2">
-        <%= partial('partials/sidenavs/wiki.html') %>
+        <%= partial('temp/nav.html') %>
     </div>
 </div>
 <%= partial('partials/footer.html') %>
