--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -40,11 +40,16 @@
         <script>
             $(document).ready(function(){
                 $("[href='/addon-project/<%= document.dest.replace('.html', '') %>']").parent('li').addClass("active").children('div').children('ul').removeClass('collapse');
-                $("li.sidenav-sub.active").parent('ul').removeClass('collapse');
+                $("li.single.active").parent('ul').removeClass('collapse');
             });
             $(function() {
                 $('#last-page-mod').githubInfoWidget({ user: 'MCResourcePile', repo: 'addon-project', branch: 'source', path: 'src/content/<%= document.src.replace(".html", ".md") %>', nouser: true, nomsg: true, abstime: false, simple: 1, last: 1, limitMessageTo: 500 });
             });
+        </script>
+        <script>
+            $('#menu-<%= document.category %>').collapse('show');
+            $("[href='/addon-project/<%= document.dest.replace('.html', '') %>']").parent('li').addClass("active");
+            $('#last-page-mod').githubInfoWidget({ user: 'MCResourcePile', repo: 'addon-project', branch: 'source', path: 'src/content/wiki/guides/new_player_guide.md', nouser: true, nomsg: true, abstime: false, simple: 1, last: 1, limitMessageTo: 500 });
         </script>
     </body>
 </html>
