--- a/src/templates/partials/sidenavs/nav_item.html
+++ b/src/templates/partials/sidenavs/nav_item.html
@@ -1,5 +1,6 @@
     {{#each this}}
     {{#isnt @key "index.md"}}
+    {{#isnt @key "tools"}}
     <li>
         {{#if (isObject this)}}
         <a href="/addon-project/wiki{{replace (replaceFirst (keyPath @root this @key) @key "") ".md" ""}}" data-toggle="collapse" data-target="#menu-{{replace @key ".md" ""}}">{{capitalizeAll (replace (replace @key ".md" "") "_" " ")}}</a>
@@ -12,5 +13,6 @@
         <a class="single" href="/addon-project/wiki{{replace (replaceFirst (keyPath @root this @key) @key "") ".md" ""}}">{{capitalizeAll (replace (replace this ".md" "") "_" " ")}}</a>
         {{/if}}
     </li>
+    {{/isnt}}
     {{/isnt}}
     {{/each}}
