Fix preferences not being loaded

--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://mcresourcepile.github.io/assets/js/commons.js"></script>
+        <script src="https://mcresourcepile.github.io/assets/js/global.js"></script>
         <script>
             $(document).ready(function(){
                 $("[href='/addon-project/<%= document.dest.replace('/index.html', '').replace('.html', '') %>']").parent('li').addClass("active").children('div').children('ul').removeClass('collapse');
