--- a/src/templates/partials/alert.html
+++ b/src/templates/partials/alert.html
@@ -1,1 +1,1 @@
-<div class="alert alert-info alert-global" role="alert">Find out how you can contribute to the wiki <a href="https://mcresourcepile.github.io/addon-project/wiki/tools/contributing">here</a>! Consider joining our <a href="https://discord.gg/ygNgxKj">discord server</a> to keep up-to-date with other contributors and new updates.</div>
+<div class="alert alert-danger alert-global" role="alert">Development of this wiki is inactive. Thus, most content is outdated.</div>
