--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -15,14 +15,13 @@
                         <div class="footer-section-head">Development</div>
                         <a class="footer-item" href="/revisions/website">Revisions</a>
                         <a class="footer-item" href="https://github.com/MCResourcePile" target="_blank">GitHub</a>
-                        <a class="footer-item" href="https://github.com/MCResourcePile/addon-project/issues/new" target="_blank">Report an Issue</a>
+                        <a class="footer-item" href="https://github.com/MCResourcePile/MCResourcePile.github.io/issues/new" target="_blank">Report an Issue</a>
                     </div>
                     <div class="footer-section col-md-3">
                         <div class="footer-section-head">Administration</div>
                         <a class="footer-item" href="/policies/terms">Terms of Use</a>
                         <a class="footer-item" href="/policies/maps">Map Policy</a>
-                        <a class="footer-item" href="/admin/references/maps">References</a>
-                        <a class="footer-item" href="/maps/downloads">Download Stats</a>
+                        <a class="footer-item" href="/admin/references">References</a>
                     </div>
                     <div class="footer-section col-md-3">
                         <div class="footer-section-head">Site</div>
@@ -31,9 +30,7 @@
                         <a class="footer-item" href="/addon-project/wiki">Addon Project</a>
                     </div>
                 </div>
-                <div class="footer-bottom center">
-                    <div class="resourcepile-copyright-year"></div>
-                </div>
+                <div class="footer-bottom center">© 2019 ResourcePile</div>
             </div>
         </div>
         <script src="https://mcresourcepile.github.io/assets/js/global.js"></script>
